bynkc/tests/fixtures/negative/314_handler_unknown_function/src/probe.bynk
context probe

service api from http {
  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok(nonexistentFn("x"))
  }
}
